--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <title>FizzBuzzDOM</title>
 </head>
-<p id="output"></p>
+<div id="output"></div>
 <body>
   
 
