--- a/index.html
+++ b/index.html
@@ -8,51 +8,8 @@
   <link rel="stylesheet" href="style.css">
   <title>FizzBuzzDOM</title>
 </head>
-<div id="output"></div>
+<div id="fuori"></div>
 <body>
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 <!-- <script src="https://kit.fontawesome.com/11759af7d1.js" crossorigin="anonymous"></script> -->
